Fix outcome edit/create title fields for ipad resolution
closes OUT-3843

flag=none

Test-plan:
 - BEFORE CHECKING OUT PS OR RECOMPILING CSS
 - navigate to course or account outcomes
 - create or edit an outcome
 - narrow your window to 768 to 979 px wide
 - verify that the outcome title and friendly name
   input fields are messed up

 - CHECK OUT PS OR RECOMPILE CSS
 > dc run --rm web bundle exec rake css:compile
 - refresh the page, go to create or edit an outcome
 - verify things aren't messed up or confusing
 - create an outcome and verify that the outcome title
   and friendly name inputs didnt get mixed up and that
   the correct values are set

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/243883
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
QA-Review: Augusto Callejas <acallejas@instructure.com>
Product-Review: Jody Sailor

--- a/app/stylesheets/bundles/learning_outcomes.scss
+++ b/app/stylesheets/bundles/learning_outcomes.scss
@@ -376,3 +376,18 @@ table.criterion .insert {
   list-style: none;
   padding: $ic-sp 0;
 }
+
+@media (min-width: 768px) and (max-width: 979px) {
+  .outcomes-browser {
+    .outcomes-content {
+      .learning_outcome {
+        label.span3 {
+          width: 220px
+        }
+        input.span3 {
+          width: 224px
+        }
+      }
+    }
+  }
+}
